* 2012-07-04  Volodymyr M. Lisivka  <vlisivka@gmail.com>
- Version 2.0: only core modules are left. All optional modules are removed.
- Settings module refactored, test cases are added.

* 2011-03-26  Volodymyr M. Lisivka  <vlisivka@gmail.com>
- Terminal module added
- Unit module enchanced

* Fri Oct 11 2010 Volodymyr M. Lisivka - 1.0.5
- Some functions for unit testing are added.

* Fri Apr 09 2010 Volodymyr M. Lisivka - 1.0.2
- Support for built-in documentation in modules is added.

* Wed Dec 30 2009 Volodymyr M. Lisivka - 1.0-9
- Version checking is added.

* Sun Dec 27 2009 Volodymyr M. Lisivka - 1.0-8
- Minor bugfix in perlish.sh

* Thu Dec 24 2009 Volodymyr M. Lisivka - 1.0-7
- New function added: die

* Sun Dec 20 2009 Volodymyr M. Lisivka - 1.0-6
- __END__ and ... are moved to separate module "perlish"
- Comments and documentation are updated.

* Tue Dec 15 2009 Volodymyr M. Lisivka - 1.0-5
- New functions added. New file added.

* Sun Dec 13 2009 Volodymyr M. Lisivka - 1.0-4
- rebuilt

* Sun Dec 13 2009 Volodymyr M. Lisivka - 1.0-3
- Switched to another module system.
