@@ -1,12 +1,12 @@
 
 Name:           bash-modules-tui
-Version:        2.0
+Version:        2.0.2
 Release:        1%{?dist}
 Summary:        Modules for bash to implement basic TUI
 
 Group:          System Environment/Base
 URL:            http://trac.assembla.com/bash-modules/
-License:        LGPL
+License:        LGPLv2.1+
 Source0:        %{name}.tar.gz
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
@@ -21,7 +21,7 @@ Requires:       bash-modules
 Optional modules to use with bash to implement basic text mode interface.
 
 %prep
-%setup -n %{name}
+%setup -q -n %{name}
 
 
 %build
@@ -50,3 +50,6 @@ rm -rf "$RPM_BUILD_ROOT"
 
 
 %changelog
+* Tue Jul 16 2013 Volodymyr M. Lisivka <vlisivka@gmail.com> - 2.0.2-2
+- License tag changed from LGPL to LGPL2.1+
+
