@@ -34,3 +34,5 @@
 * Sun Dec 13 2009 Volodymyr M. Lisivka - 1.0-3
 - Switched to another module system.
 
+* Tue Jul 16 2013  Volodymyr M. Lisivka - 2.0
+- Massive changes for 2.0 version.
